# Fusco

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
inc/: AST.hpp  Lex.hpp  Main.hpp  Parse.hpp  Types.hpp
inc/ast/: Expression.hpp  Statement.hpp
inc/interpreter/: Errors.hpp  Globals.hpp  Interpreter.hpp  Types.hpp
inc/lexer/: Lex.hpp  Token.hpp
src/: Main.cpp  Types.cpp
src/ast/: AST.cpp
src/interpreter/: ExpressionInterpreter.cpp  StatementInterpreter.cpp
src/lexer/: Lex.cpp
src/parser/: Parse.cpp
src/stage/: AccessResolver.cpp
